--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Oswald:500');
 .back{
   position: fixed;
@@ -9,7 +8,6 @@
  background-color: black;
   background-size:cover;
 }
-
 nav{
   width: 100%;
   position: fixed;
@@ -39,7 +37,6 @@ nav a:before{
 }
 nav a:hover:before{
   animation:in 0.2s cubic-bezier(1, 0, 0.58, 0.97) 1 both;
-
 }
 @keyframes in{
   0%{
@@ -75,15 +72,11 @@ nav a:hover:before{
     transform:translateY(0);
   }
 }
-
 @for $i from 1 through 5 {
   nav a:nth-child(#{$i}){
     animation:show .2s #{$i*0.1+1}s ease 1 both;
   }
 }
-
-
-
 .container{
     font-family: Georgia, Arial , Helvetica;
     color: red;
@@ -92,14 +85,87 @@ nav a:hover:before{
 
 }
 
+.feature {
+    position: relative;
+    width: 100%;
+    padding: 45px 0 0 0;
+}
 
+.feature .section-header {
+    margin-bottom: 30px;
+}
+
+.feature .feature-text {
+    position: relative;
+    width: 100%;
+}
+
+.feature .feature-img {
+    border-radius: 15px;
+    margin-bottom: 25px;
+    overflow: hidden;
+}
+
+.feature .feature-img .col-6,
+.feature .feature-img .col-12 {
+    padding: 0;
+    overflow: hidden;
+}
+
+.feature .feature-img img {
+    width: 70%;
+    transition: .3s;
+}
+
+.feature .feature-img img:hover {
+    transform: scale(1.1);
+}
+
+.feature .feature-text .btn {
+    width: 100%;
+    margin-top: 15px;
+    margin-bottom: 45px;
+}
+
+.feature .feature-item {
+    width: 100%;
+    margin-bottom: 45px;
+}
+
+.feature .feature-item i {
+    position: relative;
+    display: block;
+    color: red;
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 15px;
+    background-image: linear-gradient(red, black);
+
+    -webkit-text-fill-color: transparent;
+}
+
+.feature .feature-item i::after {
+    position: absolute;
+    content: "";
+    width: 40px;
+    height: 40px;
+    top: -10px;
+    left: 20px;
+    background: red;
+    border-radius: 30px;
+    z-index: -1;
+}
+
+.feature .feature-item h3 {
+    font-size: 22px;
+    font-weight: 700;
+}
 .footer {
     position: relative;
     margin-top: 45px;
     padding-top: 90px;
     background: black
 }
-
 .footer .footer-contact,
 .footer .footer-link,
 .footer .footer-newsletter {
@@ -107,7 +173,6 @@ nav a:hover:before{
     margin-bottom: 45px;
     color: #454545;
 }
-
 .footer .footer-contact h2,
 .footer .footer-link h2,
 .footer .footer-newsletter h2 {
@@ -118,7 +183,6 @@ nav a:hover:before{
     font-weight: 700;
     color: red;
 }
-
 .footer .footer-contact h2::after,
 .footer .footer-link h2::after,
 .footer .footer-newsletter h2::after {
@@ -130,14 +194,12 @@ nav a:hover:before{
     left: 0;
     background: red;
 }
-
 .footer .footer-link a {
     display: block;
     margin-bottom: 10px;
     color: red;
     transition: .3s;
 }
-
 .footer .footer-link a::before {
     position: relative;
     content: "\f105";
@@ -146,23 +208,19 @@ nav a:hover:before{
     margin-right: 10px;
     color: red;
 }
-
 .footer .footer-link a:hover {
     color: red;
     letter-spacing: 1px;
 }
-
 .footer .footer-contact p i {
     width: 25px;
     color:red;
 }
-
 .footer .footer-social {
     position: relative;
     margin-top: 20px;
     display: flex;
 }
-
 .footer .footer-social a {
     display: inline-block;
     margin-right: 5px;
@@ -176,27 +234,22 @@ nav a:hover:before{
     font-size: 16px;
     color: #ffffff;
 }
-
 .footer .footer-social a:hover {
     background: red;
 }
-
 .footer .footer-social a:last-child {
     margin: 0;
 }
-
 .footer .footer-newsletter .form {
     position: relative;
     width: 100%;
 }
-
 .footer .footer-newsletter input {
     height: 60px;
     background: transparent;
     border: 1px solid red;
     border-radius: 5px;
 }
-
 .footer .footer-newsletter .btn {
     position: absolute;
     top: 8px;
@@ -206,7 +259,6 @@ nav a:hover:before{
     font-size: 14px;
     font-weight: 700;
 }
-
 .footer .copyright {
     position: relative;
     width: 100%;
@@ -214,18 +266,14 @@ nav a:hover:before{
     text-align: center;
     background: black;
 }
-
 .footer .copyright p {
     margin: 0;
     display: inline-block;
     color: #454545;
 }
-
 .footer .copyright p a {
     color: red;
 }
-
 .footer .copyright p a:hover {
     color: red;
 }
-
