--- a/CSS/newCheckout.css
+++ b/CSS/newCheckout.css
@@ -1,6 +1,8 @@
+@import url('index.css');
+@import url('https://fonts.googleapis.com/css?family=Oswald:500');
 body{
-    background-color: #E3E7E8;
-    font-family: system-ui;
+    background-color: black;
+    font-family: 'Oswald', sans-serif;
 }
 .container{
     width: 1000px;
